fin de la partie technologie

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -529,6 +529,175 @@ body::-webkit-scrollbar-thumb {
     color: #D0D6F9;
   }
 }
+@media screen and (min-width: 769px) {
+  .techno_section {
+    color: white;
+  }
+  .techno_section .left_techno h3 span:nth-child(1) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.8rem;
+    line-height: 34px;
+    /* identical to box height */
+    letter-spacing: 4.725px;
+    color: #D0D6F9;
+    mix-blend-mode: normal;
+    opacity: 0.25;
+  }
+  .techno_section .left_techno h3 span:nth-child(2) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.5rem;
+    line-height: 34px;
+    /* identical to box height */
+    letter-spacing: 4.725px;
+    color: #D0D6F9;
+  }
+  .techno_section .left_techno h4 {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 19px;
+    letter-spacing: 2.7px;
+    color: #D0D6F9;
+  }
+  .techno_section .left_techno h1 {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 5.6rem;
+    line-height: 64px;
+    color: #FFFFFF;
+  }
+  .techno_section .left_techno p {
+    font-family: "Barlow";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 32px;
+    /* or 178% */
+    color: #D0D6F9;
+  }
+}
+@media screen and (max-width: 768px) {
+  .techno_section {
+    color: white;
+  }
+  .techno_section .left_techno h3 span:nth-child(1) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 24px;
+    /* identical to box height */
+    letter-spacing: 3.375px;
+    color: #D0D6F9;
+    mix-blend-mode: normal;
+    opacity: 0.25;
+  }
+  .techno_section .left_techno h3 span:nth-child(2) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 24px;
+    /* identical to box height */
+    letter-spacing: 3.375px;
+    text-transform: uppercase;
+    color: #D0D6F9;
+  }
+  .techno_section .left_techno h4 {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 19px;
+    letter-spacing: 2.7px;
+    color: #D0D6F9;
+  }
+  .techno_section .left_techno h1 {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 4rem;
+    line-height: 46px;
+    /* identical to box height */
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .techno_section .left_techno p {
+    font-family: "Barlow";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 28px;
+    /* or 178% */
+    color: #D0D6F9;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 375px) {
+  .crew_section {
+    color: white;
+  }
+  .crew_section .left_techno h3 span:nth-child(1) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 19px;
+    /* identical to box height */
+    letter-spacing: 2.7px;
+    color: #D0D6F9;
+    mix-blend-mode: normal;
+    opacity: 0.25;
+  }
+  .crew_section .left_techno h3 span:nth-child(2) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 19px;
+    /* identical to box height */
+    letter-spacing: 2.7px;
+    text-transform: uppercase;
+    color: #D0D6F9;
+  }
+  .crew_section .left_techno h4 {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 17px;
+    letter-spacing: 2.3625px;
+    color: #D0D6F9;
+  }
+  .crew_section .left_techno h1 {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.4rem;
+    line-height: 28px;
+    /* identical to box height */
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .crew_section .left_techno p {
+    font-family: "Barlow";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.1rem;
+    line-height: 5px;
+    /* or 178% */
+    color: #D0D6F9;
+    text-align: center;
+  }
+}
 .Home_btn {
   width: 274px;
   height: 274px;
@@ -678,6 +847,45 @@ body section {
     grid-row: 2;
   }
   .crew_section .right_crew {
+    grid-row: 1;
+  }
+}
+@media screen and (min-width: 769px) {
+  .techno_section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+  }
+  .techno_section .left_techno {
+    grid-column: 1;
+  }
+  .techno_section .right_techno {
+    grid-column: 2;
+  }
+}
+@media screen and (max-width: 768px) {
+  .techno_section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .techno_section .left_techno {
+    grid-row: 1;
+  }
+  .techno_section .right_techno {
+    grid-row: 2;
+  }
+}
+@media screen and (max-width: 375px) {
+  .techno_section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .techno_section .left_techno {
+    grid-row: 2;
+  }
+  .techno_section .right_techno {
     grid-row: 1;
   }
 }
@@ -1402,6 +1610,202 @@ body section {
     background-color: #D0D6F9;
     left: 2px;
     top: 213px;
+  }
+}
+@media screen and (min-width: 769px) {
+  .techno_section .left_techno h3 {
+    position: absolute;
+    width: 305px;
+    height: 34px;
+    left: 100.5px;
+    top: 150px;
+  }
+  .techno_section .left_techno h3 span:nth-child(1) {
+    margin-right: 10px;
+  }
+  .techno_section .left_techno .btn_techno {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    width: 180px;
+    height: 200px;
+    left: 105px;
+    top: 299px;
+  }
+  .techno_section .left_techno .btn_techno button {
+    width: 50px;
+    height: 50px;
+    border-radius: 500px;
+    border: 1px #FFFFFF solid;
+    background-color: transparent;
+    color: #FFFFFF;
+  }
+  .techno_section .left_techno .btn_techno .checked {
+    background-color: #FFFFFF;
+    color: #0B0D17;
+  }
+  .techno_section .left_techno h4 {
+    position: absolute;
+    height: 19px;
+    left: 15%;
+    right: 68.09%;
+    top: calc(70% - 9.5px - 142px);
+  }
+  .techno_section .left_techno h1 {
+    position: absolute;
+    height: 64px;
+    left: 15%;
+    right: 0%;
+    top: calc(70% - 32px - 89.5px);
+  }
+  .techno_section .left_techno p {
+    position: absolute;
+    height: 192px;
+    width: 500px;
+    left: 15%;
+    right: 5.53%;
+    top: calc(70% - 96px + 55.5px);
+  }
+  .techno_section .right_techno img {
+    position: absolute;
+    width: 500px;
+    height: 427px;
+    left: 825px;
+    top: 182px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .techno_section {
+    overflow: hidden;
+  }
+  .techno_section .left_techno h3 {
+    position: absolute;
+    width: 217px;
+    height: 24px;
+    left: 38.5px;
+    top: 136px;
+  }
+  .techno_section .left_techno h3 span:nth-child(1) {
+    margin-right: 10px;
+  }
+  .techno_section .left_techno .btn_techno {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    width: 210px;
+    height: 60px;
+    left: 279px;
+    top: 496px;
+  }
+  .techno_section .left_techno .btn_techno button {
+    width: 50px;
+    height: 50px;
+    border-radius: 500px;
+    border: 1px #FFFFFF solid;
+    background-color: transparent;
+    color: #FFFFFF;
+  }
+  .techno_section .left_techno .btn_techno .checked {
+    background-color: #FFFFFF;
+    color: #0B0D17;
+  }
+  .techno_section .left_techno h4 {
+    position: absolute;
+    height: 19px;
+    left: 40.84%;
+    right: 33.41%;
+    top: calc(70% - 9.5px - 109px);
+  }
+  .techno_section .left_techno h1 {
+    position: absolute;
+    height: 46px;
+    left: 0.11%;
+    right: 0.11%;
+    top: calc(70% - 23px - 60.5px);
+  }
+  .techno_section .left_techno p {
+    position: absolute;
+    height: 140px;
+    width: 458px;
+    left: 25%;
+    right: 0%;
+    top: calc(70% - 70px + 48.5px);
+  }
+  .techno_section .right_techno img {
+    position: absolute;
+    width: 768px;
+    height: 310px;
+    left: 0px;
+    top: 170px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .techno_section {
+    overflow: hidden;
+  }
+  .techno_section .left_techno h3 {
+    position: absolute;
+    width: 250px;
+    height: 59px;
+    left: 90px;
+    top: 78px;
+  }
+  .techno_section .left_techno h3 span:nth-child(1) {
+    margin-right: 10px;
+  }
+  .techno_section .left_techno .btn_techno {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    width: 210px;
+    height: 60px;
+    left: 79px;
+    top: 336px;
+  }
+  .techno_section .left_techno .btn_techno button {
+    width: 50px;
+    height: 50px;
+    border-radius: 500px;
+    border: 1px #FFFFFF solid;
+    background-color: transparent;
+    color: #FFFFFF;
+  }
+  .techno_section .left_techno .btn_techno .checked {
+    background-color: #FFFFFF;
+    color: #0B0D17;
+  }
+  .techno_section .left_techno h4 {
+    position: absolute;
+    width: 150px;
+    height: 19px;
+    left: 30.84%;
+    right: 33.41%;
+    top: calc(74% - 9.5px - 109px);
+  }
+  .techno_section .left_techno h1 {
+    position: absolute;
+    height: 46px;
+    left: 0.11%;
+    right: 0.11%;
+    top: calc(74% - 23px - 60.5px);
+  }
+  .techno_section .left_techno p {
+    position: absolute;
+    height: 140px;
+    width: 358px;
+    left: 0%;
+    right: 0%;
+    top: calc(72% - 70px + 48.5px);
+  }
+  .techno_section .right_techno img {
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    left: 0px;
+    top: 120px;
   }
 }
 
