--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./layout/_section_Home";
 @import "./layout/_section_destination";
 @import "./layout/section_crew";
+@import "./layout/section_techno";
 
 // pages
 
