--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -18,6 +18,8 @@
         height: 174px;
         animation: pulse-animation 2s infinite;
         cursor: pointer;
+        color:$color_tereciare ;
+        
 
 
     }
@@ -62,6 +64,7 @@
             height: 174px;
             animation: pulse-animation 2s infinite;
             cursor: pointer;
+            color: $color_tereciare;
 
 
         }
@@ -91,6 +94,8 @@
             height: 154px;
             animation: pulse-animation 2s infinite;
             cursor: pointer;
+            color: $color_tereciare;
+
 
 
         }
