--- a/sass/layout/_section_destination.scss
+++ b/sass/layout/_section_destination.scss
@@ -3,7 +3,7 @@
     .left {
         p {
             // background-color: red;
-            width: 382px;
+            width: 582px;
             height: 34px;
             margin-left: 140.5px;
             margin-top: 1px;
@@ -68,6 +68,7 @@
             width: 405px;
             // background: blue;
             text-align: justify;
+            margin-bottom:5px ;
 
         }
 
