--- a/sass/layout/_section_Home.scss
+++ b/sass/layout/_section_Home.scss
@@ -1,15 +1,65 @@
 // the breakpoint for the desktop
 @media screen and (min-width: map-get($breakpoint, desktop)) {
-    .section_home {
+    .section_home1{
         height: auto;
         width: 100%;
+        display: flex;
+        flex-direction: row;
+        position:relative ;
+        z-index:17;
+
+        }
+
+        /*scss pour injection de section lors du srool du menu debut */
+
+    .destination_section{
+        // visibility: hidden;
+        // display: none;
+        transform:translate(100%);
+        // transition:transform 20ms ;
+        position: absolute;
+        width:100% ;
+        z-index:10;
+
+}
+   .crew_section {
+       // visibility: hidden;
+       // display: none;
+       transform: translate(200%);
+       // transition:transform 20ms ;
+       position: absolute;
+       width: 100%;
+       z-index: 10;
+
+   }
+      .techno_section {
+          // visibility: hidden;
+          // display: none;
+          transform: translate(300%);
+          // transition:transform 20ms ;
+          position: absolute;
+          width: 100%;
+          z-index: 10;
+
+      }
+        /*fin */
+
+
+    .section_home {
+        height: auto;
+        width: 100vw;
         color: $color_tereciare;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        // transform: translate(50%);
-        // transition: transform 50s;
+        z-index: index 12;;
 
+        // display: none;
+        // transition:transform 20ms;
+        
+
+        
+        
 
         div {
             width: 450px;
@@ -79,3 +129,8 @@
 
     }
 }
+
+
+
+
+
